--- a/modules/SplitTwoColConflict/ext.TwoColConflict.Split.less
+++ b/modules/SplitTwoColConflict/ext.TwoColConflict.Split.less
@@ -266,15 +266,9 @@
 		background-color: transparent;
 	}
 
-	.mw-twocolconflict-split-edit-button {
+	.mw-twocolconflict-split-edit-button,
+	.mw-twocolconflict-split-expand-button {
 		display: none;
-	}
-
-	.mw-twocolconflict-single-column,
-	.mw-twocolconflict-split-column {
-		.mw-twocolconflict-split-expand-button {
-			display: none;
-		}
 	}
 
 	/* stylelint-disable-next-line selector-max-id */
